# Ground-Control

./: .editorconfig  .env.example  .gitattributes  .gitignore  .gitleaks.toml  .ground-control.yaml  .mcp.json  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Makefile  README.md  active-requirements.json  docker-compose.yml  pyproject.toml  sonar-project.properties  towncrier.toml
archive/tools/issue-graph/: .gitignore  Makefile  issue_graph.py  pyproject.toml
backend/: .dockerignore  .gitignore  Dockerfile  README.md  build.gradle.kts  gradle.lockfile  manage.py  pyproject.toml  settings.gradle.kts
backend/.serena/: project.yml
backend/.serena/memories/: GC-Traceability-Exploration-Report.md  GC-Traceability-File-Structure.md
backend/config/checkstyle/: checkstyle.xml
backend/config/spotbugs/: exclusions.xml
backend/gradle/: openjml.gradle.kts
backend/src/ground_control/: __init__.py  asgi.py  urls.py  wsgi.py
backend/src/ground_control/api/: __init__.py
backend/src/ground_control/exceptions/: __init__.py
backend/src/ground_control/logging/: __init__.py
backend/src/ground_control/schemas/: __init__.py  base.py  error.py  pagination.py
backend/src/ground_control/settings/: base.py  test.py
backend/src/main/java/com/keplerops/groundcontrol/: GroundControlApplication.java
backend/src/main/java/com/keplerops/groundcontrol/api/: ErrorResponse.java  GlobalExceptionHandler.java
backend/src/main/java/com/keplerops/groundcontrol/api/admin/: AdminGraphController.java  AnalysisController.java  BatchEmbeddingResultResponse.java  CompletenessIssueResponse.java  CompletenessResponse.java  ConsistencyViolationResponse.java  CoverageStatsResponse.java  CycleResponse.java  DashboardStatsResponse.java  EmbeddingController.java  EmbeddingResultResponse.java  EmbeddingStatusResponse.java  GitHubIssueController.java  GitHubIssueRequest.java  GitHubIssueResponse.java  GraphAdminController.java  GraphController.java  GraphEdgeResponse.java  GraphNeighborhoodQueryRequest.java  GraphPathResponse.java  GraphPathsQueryRequest.java  GraphVisualizationNodeResponse.java  GraphVisualizationResponse.java  ImportController.java  ImportResultResponse.java  PathResponse.java  PrSyncResultResponse.java  RecentChangeResponse.java  RelationValidationResponse.java  RequirementSummaryResponse.java  SimilarityPairResponse.java  SimilarityResultResponse.java  StatusDriftResponse.java  SubgraphResponse.java  SweepController.java  SweepReportResponse.java  SyncController.java  SyncResultResponse.java  WaveStatsResponse.java  WorkOrderItemResponse.java  (+2 more)
backend/src/main/java/com/keplerops/groundcontrol/domain/: BaseEntity.java
backend/src/main/resources/: application-dev.yml  application-prod.yml  application-test.yml  application.yml  logback-spring.xml
backend/src/main/resources/db/migration/: V001__create_requirement.sql  V002__create_requirement_relation.sql  V004__create_requirement_audit.sql  V005__create_requirement_relation_audit.sql  V006__create_traceability_link.sql  V007__create_github_issue_sync.sql  V010__create_age_graph.sql  V011__add_actor_to_revinfo.sql  V012__create_project_and_scope_requirements.sql  V013__create_baseline.sql  V014__case_insensitive_uid_uniqueness.sql  V015__create_requirement_embedding.sql  V016__add_reason_to_revinfo.sql  V017__create_quality_gate.sql  V017__workflow_platform_pivot.sql  V018__create_document.sql  V019__create_section.sql  V020__create_section_content.sql  V021__add_document_grammar_and_custom_fields.sql  V022__unique_requirement_per_section.sql  V023__create_adr.sql  V024__create_adr_audit.sql  V025__create_operational_asset.sql  V026__create_asset_relation.sql  V027__create_operational_asset_audit.sql  V028__create_asset_relation_audit.sql  V029__create_asset_link.sql  V032__create_asset_external_id_audit.sql  V033__add_provenance_to_asset_relation.sql  V034__add_provenance_to_asset_relation_audit.sql  V035__create_observation.sql  V036__create_observation_audit.sql  V038__add_updated_at_to_asset_relation_audit.sql  V039__create_risk_scenario.sql  V042__create_risk_scenario_link_audit.sql  V043__create_risk_assessment.sql  V045__populate_methodology_profile_schemas.sql  V046__create_control.sql  V047__create_control_audit.sql  V048__create_github_pr_sync.sql  (+63 more)
backend/src/main/resources/static/: roadmap.html
backend/src/test/java/com/keplerops/groundcontrol/: GroundControlApplicationTest.java  TestUtil.java
backend/src/test/java/com/keplerops/groundcontrol/architecture/: ArchitectureTest.java  ControllerPolicyTest.java
backend/src/test/java/com/keplerops/groundcontrol/integration/: AdrControllerIntegrationTest.java  AgeGraphServiceIntegrationTest.java  AnalysisIntegrationTest.java  ApiSecurityIntegrationTest.java  AssetRelationLifecycleIntegrationTest.java  AuditActorProvenanceIntegrationTest.java  AuditHistoryIntegrationTest.java  BaseAgeIntegrationTest.java  BaseIntegrationTest.java  BrowserSessionIntegrationTest.java  ComplianceIntegrationTest.java  ControlEffectivenessAssessmentControllerIntegrationTest.java  ControlTestControllerIntegrationTest.java  CreateIssueIntegrationTest.java  ImportIntegrationTest.java  MigrationSmokeTest.java  NestedRouteOwnershipIntegrationTest.java  PackInstallOrchestratorIntegrationTest.java  RequirementControllerIntegrationTest.java  RequirementServiceIntegrationTest.java  RequirementSpecificationsIntegrationTest.java  RequirementsE2EAgeIntegrationTest.java  RequirementsE2EIntegrationTest.java  SyncIntegrationTest.java  TestCaseControllerIntegrationTest.java  TestCaseFolderControllerIntegrationTest.java  TestCaseStepControllerIntegrationTest.java  TestCaseStepServiceIntegrationTest.java  TestPlanControllerIntegrationTest.java  TestSuiteControllerIntegrationTest.java  TraceabilityLinkControllerIntegrationTest.java  TraceabilityLinkIntegrationTest.java
backend/src/test/resources/fixtures/: test-requirements.sdoc
backend/tests/: conftest.py
backend/tests/unit/: test_exceptions.py  test_logging.py  test_package.py  test_schemas.py  test_settings.py  test_urls.py
(+1685 files in other folders)
