[build-system]
requires = ['setuptools>=42']
build-backend = 'setuptools.build_meta'

[tool.poetry]
name = "ground-control"
version = "0.1.0"
description = "A tool for syncing Jira tickets with local files"
authors = ["Your Name <your.email@example.com>"]

[tool.poetry.dependencies]
python = "^3.12"
jira = "^3.8.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.4"

[tool.poetry.scripts]
ground-control = "ground_control.main:main"
