[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ground-control"
version = "0.1.0"
description = "Open IT Risk Management Platform"
readme = "README.md"
requires-python = ">=3.12"
license = "MIT"
authors = [{ name = "KeplerOps" }]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Framework :: FastAPI",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "License :: OSI Approved :: MIT License",
    "Typing :: Typed",
]
dependencies = [
    "alembic>=1.18.4",
    "asyncpg>=0.31.0",
    "boto3>=1.42.63",
    "fastapi>=0.135.1",
    "httpx>=0.28.1",
    "icontract>=2.7.3",
    "passlib[argon2]>=1.7.4",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.13.1",
    "python-jose[cryptography]>=3.5.0",
    "redis>=7.3.0",
    "sqlalchemy[asyncio]>=2.0.48",
    "structlog>=25.5.0",
    "uvicorn[standard]>=0.41.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/ground_control"]

[tool.ruff]
target-version = "py312"
line-length = 100
src = ["src"]

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "F",    # pyflakes
    "I",    # isort
    "N",    # pep8-naming
    "B",    # flake8-bugbear
    "ANN",  # flake8-annotations
    "S",    # flake8-bandit (security)
    "D",    # pydocstyle
    "UP",   # pyupgrade
    "RUF",  # ruff-specific rules
]
ignore = [
    "D100",   # missing docstring in public module
    "D104",   # missing docstring in public package
    "D106",   # missing docstring in public nested class
    "D203",   # one-blank-line-before-class (conflicts with D211)
    "D213",   # multi-line-summary-second-line (conflicts with D212)
    "ANN101", # missing type annotation for self
    "ANN102", # missing type annotation for cls
]

[tool.ruff.lint.isort]
known-first-party = ["ground_control"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["S101", "ANN", "D"]

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
no_implicit_optional = true
check_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
asyncio_mode = "auto"
addopts = "-ra -q --strict-markers"

[dependency-groups]
dev = [
    "crosshair-tool>=0.0.102",
    "deal>=4.24.6",
    "factory-boy>=3.3.3",
    "hypothesis>=6.151.9",
    "mypy>=1.19.1",
    "pre-commit>=4.5.1",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=7.0.0",
    "respx>=0.22.0",
    "ruff>=0.15.5",
]
