[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ground-control"
version = "0.1.0"
description = "Open IT Risk Management Platform"
readme = "README.md"
requires-python = ">=3.12"
license = "MIT"
authors = [{ name = "KeplerOps" }]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Framework :: Django",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "License :: OSI Approved :: MIT License",
    "Typing :: Typed",
]
dependencies = [
    "boto3",
    "django",
    "django-auditlog",
    "django-ninja",
    "django-q2",
    "django-storages[s3]",
    "icontract",
    "psycopg[binary]",
    "pydantic",
    "pydantic-settings",
    "redis",
    "structlog",
]

[tool.hatch.build.targets.wheel]
packages = ["src/ground_control"]

[tool.ruff]
target-version = "py312"
line-length = 100
src = ["src"]

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "F",    # pyflakes
    "I",    # isort
    "N",    # pep8-naming
    "B",    # flake8-bugbear
    "ANN",  # flake8-annotations
    "S",    # flake8-bandit (security)
    "D",    # pydocstyle
    "UP",   # pyupgrade
    "RUF",  # ruff-specific rules
]
ignore = [
    "D100",   # missing docstring in public module
    "D104",   # missing docstring in public package
    "D106",   # missing docstring in public nested class
    "D203",   # one-blank-line-before-class (conflicts with D211)
    "D213",   # multi-line-summary-second-line (conflicts with D212)
]

[tool.ruff.lint.isort]
known-first-party = ["ground_control"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["S101", "ANN", "D"]

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
no_implicit_optional = true
check_untyped_defs = true
plugins = ["mypy_django_plugin.main"]

[tool.django-stubs]
django_settings_module = "ground_control.settings.base"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-ra -q --strict-markers"
DJANGO_SETTINGS_MODULE = "ground_control.settings.test"

[dependency-groups]
dev = [
    "crosshair-tool",
    "django-stubs",
    "factory-boy",
    "hypothesis",
    "mypy",
    "pre-commit",
    "pytest",
    "pytest-cov",
    "pytest-django",
    "ruff",
]
