[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "issue-graph"
version = "0.1.0"
description = "NetworkX-based GitHub issue dependency graph analyzer"
requires-python = ">=3.12"
dependencies = [
    "networkx>=3.2",
]

[project.optional-dependencies]
viz = [
    "matplotlib>=3.8",
]

[project.scripts]
issue-graph = "issue_graph:main"
